plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// SQLite JDBC driver for data persistence (bundled into the mod jar).
	implementation "org.xerial:sqlite-jdbc:${project.sqlite_version}"
	include "org.xerial:sqlite-jdbc:${project.sqlite_version}"

	// MySQL JDBC driver for the optional mysql backend (bundled into the mod jar).
	implementation "com.mysql:mysql-connector-j:${project.mysql_version}"
	include "com.mysql:mysql-connector-j:${project.mysql_version}"

	// Test dependencies (JUnit 5).
	testImplementation "org.junit.jupiter:junit-jupiter:5.11.4"
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.11.4"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

test {
	useJUnitPlatform()
	// Forward optional -Pservereconomy.test.mysql.* flags to the MySQL integration tests.
	["host", "port", "user", "password", "database"].each { key ->
		def value = findProperty("servereconomy.test.mysql." + key)
		if (value != null) {
			systemProperty "servereconomy.test.mysql." + key, value
		}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
